--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">9 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -438,9 +438,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=Yk0grd6ClAU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/Yk0grd6ClAU/mqdefault.jpg" alt="Pretty Good Oscillator (PGO) by Mark Johnson">
+                    <img src="https://i.ytimg.com/vi/Yk0grd6ClAU/mqdefault.jpg" alt="PGO Strategy (Rules & Backtest)">
                     <div class="video-info">
-                        <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
+                        <h3>PGO Strategy (Rules & Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -862,7 +862,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5816,9 +5816,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=Yk0grd6ClAU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/Yk0grd6ClAU/mqdefault.jpg" alt="Pretty Good Oscillator (PGO) by Mark Johnson">
+                        <img src="https://i.ytimg.com/vi/Yk0grd6ClAU/mqdefault.jpg" alt="PGO Strategy (Rules & Backtest)">
                         <div class="video-info">
-                            <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
+                            <h3>PGO Strategy (Rules & Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -5976,7 +5976,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8894,7 +8894,7 @@
                         <div class="video-info">
                             <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">9 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
